<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">aaArchiveorEmail</string>
    <string name="action_settings">Settings</string>
    <string name="edit_webserver_message">Enter a web server:</string>
    <string name="edit_post_message">Enter query string:</string>
    <string name="edit_email_message">Enter email:</string>
    <string name="edit_webserver_title">Web URL:</string>
    <string name="edit_post_title">Query:</string>
    <string name="edit_email_title">Email:</string>
    <string name="archive_completed_message">Page archived</string>
    <string name="email_completed_message">Email sent</string>
    <string name="email_failed_message">Email not sent, no email client installed</string>
    <string name="archive_failed_message">Page archive failed, error: </string>
    <string name="edit_get_radio_title">Get</string>
    <string name="edit_post_radio_title">Post</string>
    <string name="button_update">Update</string>
    <string name="title_activity_display_message">DisplayMessage</string>
    <string name="title_activity_admin_message">AdminPage</string>
    <string name="hello_world">Hello world!</string>
    <string name="from_share">Boo!</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="admin_URL">http://www.rsc.ukfsn.org/zxbblog/BlogWrite.php</string>
    <string name="admin_Category">testAndroid</string>
    <string name="title_activity_share_activity_email">Aa Email</string>
    <string name="title_activity_share_activity_web">Aa Archive</string>
    <string name="title_activity_main">My App Archive</string>
    <string name="ADMIN_MESSAGE">Settings updated</string>

</resources>
