<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/LinearLayout1"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.aaArchiveorEmail.AdminActivity$PlaceholderFragment">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_webserver_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <EditText
            android:id="@+id/admin_webserver"
            android:hint="@string/edit_webserver_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="text" />

        <requestFocus />
        </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:text="@string/edit_post_title"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/admin_querystring"
            android:hint="@string/edit_post_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="text" >
        </EditText>

    </TableRow>
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp" >

        <TextView
            android:text="@string/edit_email_title"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/admin_email"
            android:hint="@string/edit_email_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:inputType="text" >
        </EditText>

    </TableRow>
</TableLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal" >

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/admin_get_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_get_radio_title"
           />
        <RadioButton android:id="@+id/admin_post_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_post_radio_title"
            />
    </RadioGroup>

 </LinearLayout>
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >
    <Button
        android:id="@+id/admin_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_update"
        android:onClick="adminUpdate"
        />
  </LinearLayout>
</LinearLayout>